Forgot some newlines

--- a/xscast.1
+++ b/xscast.1
@@ -6,9 +6,11 @@ xscast \- screencasts of windows with list of keystrokes overlayed
 [\fIOPTION\fR]...
 \fIOUTPUT-FILE\fR
 .br
-.B xscast \fB\-h\fR|\fB\-\-help\fR
+.B xscast
+\fB\-h\fR|\fB\-\-help\fR
 .br
-.B xscast \fB\-c\fR|\fB\-\-config\fR
+.B xscast
+\fB\-c\fR|\fB\-\-config\fR
 .SH DESCRPTION
 .B xscast
 is a tool for creating mini-screencasts of a terminal or other window. It
