--- a/xscast.1
+++ b/xscast.1
@@ -44,7 +44,7 @@ Do not display the bar containing keystrokes.
 Set a delay before starting to record.
 .TP
 .BR \-R ", " \-\-no-record
-Do not record, only display the bar containing keystrokes
+Do not record, only display the bar containing keystrokes.
 .SH FILES
 .TP
 .I ~/.xscastrc
